[package]
name = "signacfs-fuse"
version = "0.0.1"
authors = ["zerosign <r1nlx0@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fuse = { git = "https://github.com/jmpq/async-fuse-rs", version = "0.1.0-dev" }
signacfs-core = { path = "../core" }
